Adding database to save cards; migrating to AndroidX

--- a/BabyRecognitionProgram/app/src/main/res/layout/activity_create_new_card.xml
+++ b/BabyRecognitionProgram/app/src/main/res/layout/activity_create_new_card.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateNewCard">
+    tools:context=".activities.CreateNewCard">
 
     <include layout="@layout/content_create_new_card" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
