--- a/BabyRecognitionProgram/app/src/main/res/layout/content_main.xml
+++ b/BabyRecognitionProgram/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/ic_brp_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context=".activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <Button
