--- a/BabyRecognitionProgram/app/src/main/res/layout/fragment_slide_show.xml
+++ b/BabyRecognitionProgram/app/src/main/res/layout/fragment_slide_show.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SlideShowActivity$PlaceholderFragment">
+    tools:context=".activities.SlideShowActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
