--- a/BabyRecognitionProgram/app/src/main/res/menu/menu_main.xml
+++ b/BabyRecognitionProgram/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.themattburton.cs449.babyrecognitionprogram.SlideReviewActivity">
+    tools:context="com.themattburton.cs449.babyrecognitionprogram.activities.SlideReviewActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
